--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "multer": "^1.4.5",
     "body-parser": "^1.20.2",
     "openai": "^4.25.0"
   }
