--- a/package.json
+++ b/package.json
@@ -1,17 +1,16 @@
 {
-  "name": "compost-backend",
+  "name": "backend-compost",
   "version": "1.0.0",
-  "description": "Servidor backend para analizar imágenes de residuos con GPT-4o",
+  "type": "commonjs",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
     "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "multer": "^1.4.5",
-    "body-parser": "^1.20.2",
-    "openai": "^4.25.0"
+    "fs": "^0.0.1-security",
+    "multer": "^1.4.5-lts.1",
+    "openai": "^4.40.0"
   }
 }
